// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Score /> Error story renders snapshot 1`] = `
<span
  class="text text--sm text--bold-weight tag tag--neutral tag--outline score score--error"
>
  <span
    class="tag__body"
  >
    6 / 10
  </span>
</span>
`;

exports[`<Score /> Success story renders snapshot 1`] = `
<span
  class="text text--sm text--bold-weight tag tag--neutral tag--outline score score--success"
>
  <span
    class="tag__body"
  >
    91 / 100
  </span>
</span>
`;

exports[`<Score /> Table story renders snapshot 1`] = `
<div>
  <p
    class="mb-4"
  >
    Score has transparent border for use in Table component
  </p>
  <span
    class="text text--sm text--bold-weight tag tag--neutral tag--outline score score--table"
  >
    <span
      class="tag__body"
    >
      6 / 10
    </span>
  </span>
</div>
`;
